--- a/FuelPriceApp/FuelPriceApp.Frontend/Client/FuelPriceApp.Frontend.Client.csproj
+++ b/FuelPriceApp/FuelPriceApp.Frontend/Client/FuelPriceApp.Frontend.Client.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MatBlazor" Version="2.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.3" PrivateAssets="all" />
   </ItemGroup>
